--- a/src/app/groups/groups-view/general-tab/general-tab.component.html
+++ b/src/app/groups/groups-view/general-tab/general-tab.component.html
@@ -1,7 +1,7 @@
 <div class="tab-container mat-typography">
 
   <!-- <h3>Group Details</h3> -->
-  <h3>Thông tin về đại lý</h3>
+  <h3>{{ 'Group_Component.Create_Group_Component.GroupView.GenaralTab.h3'| translate}}</h3>
 
 
   <div fxLayout="row" fxLayoutGap="32px" class="group-details-container m-b-30">
@@ -17,7 +17,7 @@
     </p> -->
     <p>
       <!-- Active Clients: {{groupSummary?.activeClients}}<br/> -->
-      Số lượng thành viên active: {{groupSummary?.activeClients}}<br/>
+      {{ 'Group_Component.Create_Group_Component.GroupView.GenaralTab.p'| translate}}{{groupSummary?.activeClients}}<br/>
     </p>
   </div>
   <!-- Thông tin saving account -->
@@ -26,7 +26,7 @@
     <div fxLayout="row" fxLayoutAlign="start" class="table-header">
       <div class="m-b-10">
         <!-- <h3>Saving Accounts</h3> -->
-        <h3>Tài khoản tạm ứng</h3>
+        <h3>{{ 'Group_Component.Create_Group_Component.GroupView.GenaralTab.h3_2'| translate}}</h3>
       </div>
       <div class="action-button m-b-10">
         <button *ngIf="(savingAccounts|accountsFilter:'saving':'closed').length" mat-raised-button class="f-right" color="primary"
@@ -40,51 +40,51 @@
 
       <ng-container matColumnDef="Account No">
         <!-- <th mat-header-cell *matHeaderCellDef> Account No. </th> -->
-        <th mat-header-cell *matHeaderCellDef> Số tài khoản </th>
+        <th mat-header-cell *matHeaderCellDef> {{ 'Group_Component.Create_Group_Component.GroupView.GenaralTab.accountNo'| translate}} </th>
         <td mat-cell *matCellDef="let element"> <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
           {{element.accountNo}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Saving Account">
         <!-- <th mat-header-cell *matHeaderCellDef> Saving Account </th> -->
-        <th mat-header-cell *matHeaderCellDef> Loại tài khoản </th>
+        <th mat-header-cell *matHeaderCellDef> {{ 'Group_Component.Create_Group_Component.GroupView.GenaralTab.productName'| translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Last Active">
         <!-- <th mat-header-cell *matHeaderCellDef> Last Active </th> -->
-        <th mat-header-cell *matHeaderCellDef> Ngày phát sinh gần nhất </th>
+        <th mat-header-cell *matHeaderCellDef> {{ 'Group_Component.Create_Group_Component.GroupView.GenaralTab.lastActiveTransactionDate'| translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.lastActiveTransactionDate | date}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Balance">
         <!-- <th mat-header-cell *matHeaderCellDef> Balance </th> -->
-        <th mat-header-cell *matHeaderCellDef matTooltip="Nếu số dư >0 là phải thu, nếu số dư <0 là phải trả"> Số dư </th>
+        <th mat-header-cell *matHeaderCellDef [matTooltip]="'Group_Component.Create_Group_Component.GroupView.GenaralTab.toolTipCheckBalance'| translate"> {{ 'Group_Component.Create_Group_Component.GroupView.GenaralTab.accountBalance'| translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.accountBalance | money}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Actions">
         <!-- <th mat-header-cell *matHeaderCellDef> Actions </th> -->
-        <th mat-header-cell *matHeaderCellDef> Hành động </th>
+        <th mat-header-cell *matHeaderCellDef> {{ 'Group_Component.Create_Group_Component.GroupView.GenaralTab.Actions'| translate}} </th>
         <td mat-cell *matCellDef="let element">
           <button *ngIf="element.status.active" class="account-action-button" mat-raised-button color="primary"
             (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Deposit']">
             <!-- <i class="fa fa-arrow-up" matTooltip="Deposit"></i> -->
-            <i class="fa fa-arrow-up" matTooltip="Ghi nhận phải trả"></i>
+            <i class="fa fa-arrow-up" [matTooltip]="'Group_Component.Create_Group_Component.GroupView.GenaralTab.toolTipPay'| translate"></i>
           </button>
           <button *ngIf="element.status.active" class="account-action-button" mat-raised-button color="primary"
             (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Withdrawal']">
             <!-- <i class="fa fa-arrow-down" matTooltip="Withdraw"></i> -->
-            <i class="fa fa-arrow-down" matTooltip="Ghi nhận phải thu"></i>
+            <i class="fa fa-arrow-down" [matTooltip]="'Group_Component.Create_Group_Component.GroupView.GenaralTab.toolTipGet'| translate"></i>
           </button>
           <button *ngIf="element.status.submittedAndPendingApproval" class="account-action-button" mat-raised-button color="primary"
             (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Approve']">
-            <i class="fa fa-check" matTooltip="Approve"></i>
+            <i class="fa fa-check" [matTooltip]="'Group_Component.Create_Group_Component.GroupView.GenaralTab.toolTipApprove'| translate"></i>
           </button>
           <button *ngIf="!element.status.submittedAndPendingApproval && !element.status.active"
             class="account-action-button" mat-raised-button color="primary"
             (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Undo Approval']">
-            <i class="fa fa-undo" matTooltip="Undo Approval"></i>
+            <i class="fa fa-undo" [matTooltip]="'Group_Component.Create_Group_Component.GroupView.GenaralTab.toolTipUndoApproval'| translate"></i>
           </button>
           <button *ngIf="!element.status.submittedAndPendingApproval && !element.status.active"
             class="account-action-button" mat-raised-button color="primary"
@@ -104,18 +104,18 @@
       class="mat-elevation-z1 m-b-30">
 
       <ng-container matColumnDef="Account No">
-        <th mat-header-cell *matHeaderCellDef> Account No. </th>
+        <th mat-header-cell *matHeaderCellDef> {{ 'Group_Component.Create_Group_Component.GroupView.GenaralTab.accountNo2'| translate}} </th>
         <td mat-cell *matCellDef="let element"> <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
           {{element.accountNo}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Saving Account">
-        <th mat-header-cell *matHeaderCellDef> Saving Account </th>
+        <th mat-header-cell *matHeaderCellDef> {{ 'Group_Component.Create_Group_Component.GroupView.GenaralTab.productName2'| translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Closed Date">
-        <th mat-header-cell *matHeaderCellDef> Closed Date </th>
+        <th mat-header-cell *matHeaderCellDef> {{ 'Group_Component.Create_Group_Component.GroupView.GenaralTab.closedOnDate'| translate}} </th>
         <td mat-cell *matCellDef="let element">{{element.timeline.closedOnDate | date}}</td>
       </ng-container>
 
