--- a/src/app/groups/groups-view/group-actions/activate-group/activate-group.component.html
+++ b/src/app/groups/groups-view/group-actions/activate-group/activate-group.component.html
@@ -7,20 +7,20 @@
       <mat-card-content>
 
           <mat-form-field fxFlex>
-            <mat-label>Activated On Date</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Activate.activationDate'| translate}}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="activationDatePicker" required formControlName="activationDate">
             <mat-datepicker-toggle matSuffix [for]="activationDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #activationDatePicker></mat-datepicker>
             <mat-error *ngIf="activateGroupForm.controls.activationDate.hasError('required')">
-              Activated On Date is <strong>required</strong>
+              {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Activate.erractivationDate'| translate}}<strong>{{ 'Group_Component.strongRequired'| translate}}</strong>
             </mat-error>
           </mat-form-field>
 
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="accent" [disabled]="!activateGroupForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="accent" [disabled]="!activateGroupForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
