--- a/src/app/groups/groups-view/group-actions/close-group/close-group.component.html
+++ b/src/app/groups/groups-view/group-actions/close-group/close-group.component.html
@@ -9,24 +9,24 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Closed On Date</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Close.closureDate'| translate}}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="closureDatePicker" required formControlName="closureDate">
             <mat-datepicker-toggle matSuffix [for]="closureDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #closureDatePicker></mat-datepicker>
             <mat-error *ngIf="closeGroupForm.controls.closureDate.hasError('required')">
-              Closed On Date is <strong>required</strong>
+              {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Close.errclosureDate'| translate}}<strong>{{ 'Group_Component.strongRequired'| translate}}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Closure Reason</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Close.closureReasonId'| translate}}</mat-label>
             <mat-select formControlName="closureReasonId">
               <mat-option *ngFor="let reason of closureData" [value]="reason.id">
                 {{ reason.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="closeGroupForm.controls.closureReasonId.hasError('required')">
-              Closure Reason is <strong>required</strong>
+              {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Close.errclosureReasonId'| translate}}<strong>{{ 'Group_Component.strongRequired'| translate}}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -35,8 +35,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="warn" [disabled]="!closeGroupForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="warn" [disabled]="!closeGroupForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
