--- a/src/app/groups/groups-view/group-actions/edit-group-meeting/edit-group-meeting.component.html
+++ b/src/app/groups/groups-view/group-actions/edit-group-meeting/edit-group-meeting.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end">
   <button mat-raised-button color="primary" (click)="editSchedule()">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit Schedule
+    {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.btnEditSchedule'| translate}}
   </button>
 </div>
 
@@ -16,63 +16,65 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Repetition Frequency</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.frequency'| translate}}</mat-label>
             <mat-select formControlName="frequency">
               <mat-option *ngFor="let option of frequencyOptions" [value]="option.id">
                 {{ option.value }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="groupEditMeetingForm.controls.frequency.hasError('repeatsOnDay')">
-              Repetition Frequency is <strong>required</strong>
+              {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.errfrequency'| translate}}<strong>{{ 'Group_Component.strongRequired'| translate}}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Repetition Interval</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.interval'| translate}}</mat-label>
             <mat-select formControlName="interval">
               <mat-option *ngFor="let interval of repetitionIntervals" [value]="interval">
                 {{ interval }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="groupEditMeetingForm.controls.interval.hasError('repeatsOnDay')">
-              Repeition Interval is <strong>required</strong>
+              {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.errinterval'| translate}}<strong>{{ 'Group_Component.strongRequired'| translate}}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="groupEditMeetingForm.contains('repeatsOnDay')">
-          <mat-label>Repeats on Day</mat-label>
+          <mat-label>{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.repeatsOnDay'| translate}}</mat-label>
           <mat-select formControlName="repeatsOnDay" required>
             <mat-option *ngFor="let day of repeatsOnDays" [value]="day.id">
               {{ day.value }}
             </mat-option>
           </mat-select>
           <mat-error *ngIf="groupEditMeetingForm.controls.repeatsOnDay.hasError('repeatsOnDay')">
-            At least <strong>one</strong> day must be selected
+            {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.Atleast '| translate}}
+            <strong>{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.one '| translate}}</strong>
+            {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.dayMustBeSelected '| translate}}
           </mat-error>
         </mat-form-field>
 
         <mat-form-field class="m-b-5">
-          <mat-label>Above Changes are Effective from</mat-label>
+          <mat-label>{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.startDate '| translate}}</mat-label>
           <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="startDatePicker" required formControlName="startDate">
           <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #startDatePicker></mat-datepicker>
           <mat-error *ngIf="groupEditMeetingForm.controls.startDate.hasError('required')">
-            Changes Affection Date is <strong>required</strong>
+            {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.errstartDate '| translate}}<strong>{{ 'Group_Component.strongRequired'| translate}}</strong>
           </mat-error>
           <mat-hint>
-            Note: 'Repeats' and 'Repeats every' cannot not be modified if there are active accounts <br>
-            (JLG Loans, Recurring Deposits etc) dependent on this meeting.
+            {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.note '| translate}}<br>
+            {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.Edit.note2 '| translate}}
           </mat-hint>
         </mat-form-field>
-  
+
         </div>
 
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
         <button mat-raised-button color="primary" [disabled]="!groupEditMeetingForm.valid" (click)="submit()"
-        *midasHasPermission="'CREATE_MEETING'">Submit</button>
+        *midasHasPermission="'CREATE_MEETING'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
