--- a/src/app/groups/groups-view/group-actions/group-assign-staff/group-assign-staff.component.html
+++ b/src/app/groups/groups-view/group-actions/group-assign-staff/group-assign-staff.component.html
@@ -9,14 +9,14 @@
         <div fxLayout="column">
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Staff</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.AssignStaff.staffId'| translate}}</mat-label>
             <mat-select formControlName="staffId">
               <mat-option *ngFor="let staff of staffData" [value]="staff.id">
                 {{ staff.displayName }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="groupAssignStaffForm.controls.staffId.hasError('required')">
-              Staff is <strong>required</strong>
+              {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.AssignStaff.errstaffId'| translate}}<strong>{{ 'Group_Component.strongRequired'| translate}}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -25,8 +25,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!groupAssignStaffForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!groupAssignStaffForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
