--- a/src/app/groups/groups-view/notes-tab/notes-tab.component.html
+++ b/src/app/groups/groups-view/notes-tab/notes-tab.component.html
@@ -1,7 +1,7 @@
 <div class="tab-container mat-typography">
 
   <!-- <h3>Notes</h3> -->
-  <h3>Ghi chú</h3>
+  <h3>{{'Group_Component.Create_Group_Component.GroupView.NoteTab.h3'| translate}}</h3>
 
   <form #formRef="ngForm" [formGroup]="noteForm" fxLayout="row" fxLayoutAlign="start baseline" fxLayoutGap="20px"
       (ngSubmit)="addNote()">
@@ -12,7 +12,7 @@
 
     <button mat-raised-button fxFlex color="primary" *midasHasPermission="'CREATE_GROUPNOTE'" [disabled]="!noteForm.valid">
       <!-- <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Add -->
-      <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Thêm
+      <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; {{'Group_Component.Create_Group_Component.GroupView.NoteTab.btnAdd'| translate}}
     </button>
 
   </form>
@@ -25,8 +25,8 @@
       <p matLine>
         <!-- <span>Created by: {{groupNote.createdByUsername}}</span><br />
         <span>Date: {{groupNote.createdOn | date}}</span> -->
-        <span>Tạo bởi: {{groupNote.createdByUsername}}</span><br />
-        <span>Ngày: {{groupNote.createdOn | date}}</span>
+        <span>{{'Group_Component.Create_Group_Component.GroupView.NoteTab.createdByUsername'| translate}}{{groupNote.createdByUsername}}</span><br />
+        <span>{{'Group_Component.Create_Group_Component.GroupView.NoteTab.createdOn'| translate}}{{groupNote.createdOn | date}}</span>
       </p>
       <div fxLayout="row" fxLayoutAlign="flex-start">
         <button mat-button color="primary" (click)="editNote(groupNote.id,groupNote.note,i)">
@@ -37,7 +37,7 @@
         </button>
       </div>
     </mat-list-item>
-    
+
   </mat-list>
 
 </div>
