--- a/src/app/groups/spending-limit/spending-limit.component.html
+++ b/src/app/groups/spending-limit/spending-limit.component.html
@@ -3,28 +3,28 @@
         <div fxFlex="70%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.xs="column">
             <div fxFlex="18%">
                 <mat-form-field>
-                    <mat-label>Năm</mat-label>
+                    <mat-label>{{'Group_Component.Create_Group_Component.SpendingLimit.year'| translate}}</mat-label>
                     <input matInput required type="number" formControlName="year">
                 </mat-form-field>
             </div>
             <div fxFlex="18%" style="margin: 6px;">
                 <mat-form-field>
-                    <mat-label>Tháng</mat-label>
+                    <mat-label>{{'Group_Component.Create_Group_Component.SpendingLimit.month'| translate}}</mat-label>
                     <input matInput required type="number" formControlName="month">
                 </mat-form-field>
             </div>
             <div fxFlex="18%">
-                <button mat-raised-button color="primary" (click)="getData()"> Xem</button>
+                <button mat-raised-button color="primary" (click)="getData()"> {{'Group_Component.Create_Group_Component.SpendingLimit.btnView'| translate}}</button>
             </div>
             <div fxFlex="28%" class="search-box">
                 <mat-form-field class="filter">
-                    <input matInput #filter (keyup)="applyFilter($event)" placeholder="Tìm kiếm ... ">
+                    <input matInput #filter (keyup)="applyFilter($event)" [placeholder]="'CardTransfer.tableCardTransfer.placeholderSearch'| translate">
                 </mat-form-field>
             </div>
         </div>
         <div class="action-button" fxFlex="20%">
             <button mat-raised-button color="primary" (click)="createEditSpending()">
-                <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Thêm hạn mức
+                <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{'Group_Component.Create_Group_Component.SpendingLimit.btnAddLimit'| translate}}
             </button>
         </div>
     </div>
@@ -32,25 +32,25 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
         <ng-container matColumnDef="refid">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Group_Component.Create_Group_Component.SpendingLimit.refid'| translate}}</th>
             <td mat-cell *matCellDef="let row"> {{ row.refid }} </td>
         </ng-container>
 
         <ng-container matColumnDef="month">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Tháng</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Group_Component.Create_Group_Component.SpendingLimit.month2'| translate}}</th>
             <td mat-cell *matCellDef="let row"> {{ row.month }} </td>
         </ng-container>
 
         <ng-container matColumnDef="year">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Năm</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Group_Component.Create_Group_Component.SpendingLimit.year2'| translate}}</th>
             <td mat-cell *matCellDef="let row"> {{ row.year }} </td>
         </ng-container>
         <ng-container matColumnDef="paymentTypeId">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Loại </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Group_Component.Create_Group_Component.SpendingLimit.paymentTypeId'| translate}} </th>
             <td mat-cell *matCellDef="let row"> {{ getPaymetType(row.paymentTypeId) }}</td>
         </ng-container>
         <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Trạng thái </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Group_Component.Create_Group_Component.SpendingLimit.status'| translate}} </th>
             <td mat-cell *matCellDef="let row"> {{ row.status }}</td>
         </ng-container>
         <ng-container matColumnDef="action">
