--- a/src/app/groups/groups-view/group-actions/group-transfer-clients/group-transfer-clients.component.html
+++ b/src/app/groups/groups-view/group-actions/group-transfer-clients/group-transfer-clients.component.html
@@ -9,29 +9,29 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Select Client Members for Transfer</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.TransferClients.clients'| translate}}</mat-label>
             <mat-select required formControlName="clients" multiple>
               <mat-option *ngFor="let member of clientMembers" [value]="{ id: member.id }">
                 {{ member.displayName }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="transferClientsForm.controls.clients.hasError('required')">
-              Office is <strong>required</strong>
+              {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.TransferClients.errclients'| translate}}<strong>{{ 'Group_Component.strongRequired'| translate}}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-checkbox class="m-t-10 m-b-10" labelPosition="before" formControlName="inheritDestinationGroupLoanOfficer">
-            Inherit Group Loan Officer?
+            {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.TransferClients.inheritDestinationGroupLoanOfficer'| translate}}
           </mat-checkbox>
 
           <mat-form-field>
-            <mat-label>Destination Group</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.TransferClients.destinationGroupId'| translate}}</mat-label>
             <input matInput formControlName="destinationGroupId" [matAutocomplete]="groupsAutocomplete">
             <mat-error *ngIf="transferClientsForm.controls.destinationGroupId.hasError('required')">
-              Destination Group is <strong>required</strong>
+              {{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.TransferClients.errdestinationGroupId'| translate}}<strong>{{ 'Group_Component.strongRequired'| translate}}</strong>
             </mat-error>
           </mat-form-field>
-  
+
         </div>
 
         <mat-autocomplete autoActiveFirstOption #groupsAutocomplete="matAutocomplete" [displayWith]="displayGroup">
@@ -42,26 +42,26 @@
 
         <div class="mat-table" *ngIf="transferClientsForm.get('destinationGroupId').value">
           <div class="mat-header-row">
-            <div class="mat-header-cell">Destination Group Details</div>
+            <div class="mat-header-cell">{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.TransferClients.DestinationGroupDetails'| translate}}</div>
           </div>
           <div class="mat-row">
-            <div class="mat-cell">Name</div>
+            <div class="mat-cell">{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.TransferClients.name'| translate}}</div>
             <div class="mat-cell">{{transferClientsForm.get('destinationGroupId').value.name}}</div>
           </div>
           <div class="mat-row">
-            <div class="mat-cell">Id</div>
+            <div class="mat-cell">{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.TransferClients.id'| translate}}</div>
             <div class="mat-cell">{{transferClientsForm.get('destinationGroupId').value.id}}</div>
           </div>
           <div class="mat-row">
-            <div class="mat-cell">Activation Date</div>
+            <div class="mat-cell">{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.TransferClients.activationDate'| translate}}</div>
             <div class="mat-cell">{{(transferClientsForm.get('destinationGroupId').value.activationDate | date) || 'Not Activated'}}</div>
           </div>
           <div class="mat-row">
-            <div class="mat-cell">Staff</div>
+            <div class="mat-cell">{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.TransferClients.staffName'| translate}}</div>
             <div class="mat-cell">{{transferClientsForm.get('destinationGroupId').value.staffName || 'Unassigned'}}</div>
           </div>
           <div class="mat-row">
-            <div class="mat-cell">External Id</div>
+            <div class="mat-cell">{{ 'Group_Component.Create_Group_Component.GroupView.GroupActions.TransferClients.externalId'| translate}}</div>
             <div class="mat-cell">{{transferClientsForm.get('destinationGroupId').value.externalId || 'Unassigned'}}</div>
           </div>
         </div>
@@ -69,9 +69,9 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
         <button mat-raised-button color="primary" [disabled]="!transferClientsForm.valid" (click)="submit()"
-          *midasHasPermission="'TRANSFERCLIENTS_GROUP'">Submit</button>
+          *midasHasPermission="'TRANSFERCLIENTS_GROUP'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
