--- a/src/app/groups/groups-view/group-actions/manage-group-members/manage-group-members.component.html
+++ b/src/app/groups/groups-view/group-actions/manage-group-members/manage-group-members.component.html
@@ -3,33 +3,33 @@
   <mat-card fxFlex="30%" class="client-card" fxLayout="column" fxLayoutAlign="start stretch" fxLayoutGap="2%">
 
     <mat-form-field>
-      <mat-label>Add Clients</mat-label>
+      <mat-label>{{'Group_Component.Create_Group_Component.GroupView.GroupActions.ManageMembers.clientChoice'| translate}}</mat-label>
       <input matInput [formControl]="clientChoice" [matAutocomplete]="clientsAutocomplete">
     </mat-form-field>
 
     <mat-autocomplete autoActiveFirstOption #clientsAutocomplete="matAutocomplete" [displayWith]="displayClient" (optionSelected)='getClientIdSelect($event.option.value)'>
       <mat-option *ngFor="let client of clientsData" [value]="client">
-        {{ client.displayName}} - chi nhánh: {{client.officeName}}
+        {{ client.displayName}}{{'Group_Component.Create_Group_Component.GroupView.GroupActions.ManageMembers.officeName'| translate}}{{client.officeName}}
       </mat-option>
     </mat-autocomplete>
 
     <div class="mat-table" fxLayout="column" fxLayoutAlign="start stretch" fxLayoutGap="2%">
       <div class="mat-header-row" fxLayout="row" fxLayoutAlign="start center">
-        <div class="mat-header-cell" fxFlex="25%">Client Details</div>
+        <div class="mat-header-cell" fxFlex="25%">{{'Group_Component.Create_Group_Component.GroupView.GroupActions.ManageMembers.ClientDetails'| translate}}</div>
         <button mat-icon-button (click)="addClient()" [disabled]="!displayAddClient">
           <fa-icon icon="plus"></fa-icon>
         </button>
       </div>
       <div class="mat-row">
-        <div class="mat-cell" fxFlex="20%">Name</div>
+        <div class="mat-cell" fxFlex="20%">{{'Group_Component.Create_Group_Component.GroupView.GroupActions.ManageMembers.displayName'| translate}}</div>
         <div class="mat-cell" fxFlex="80%">{{clientChoice.value.displayName}}</div>
       </div>
       <div class="mat-row">
-        <div class="mat-cell" fxFlex="20%">Id</div>
+        <div class="mat-cell" fxFlex="20%">{{'Group_Component.Create_Group_Component.GroupView.GroupActions.ManageMembers.id'| translate}}</div>
         <div class="mat-cell" fxFlex="80%">{{clientChoice.value.id}}</div>
       </div>
       <div class="mat-row">
-        <div class="mat-cell" fxFlex="20%">Office</div>
+        <div class="mat-cell" fxFlex="20%">{{'Group_Component.Create_Group_Component.GroupView.GroupActions.ManageMembers.officeName2'| translate}}</div>
         <div class="mat-cell" fxFlex="80%">{{clientChoice.value.officeName}}</div>
       </div>
     </div>
@@ -38,7 +38,7 @@
 
   <mat-card fxFlex="68%">
 
-    <h3 matSubheader>Client Members</h3>
+    <h3 matSubheader>{{'Group_Component.Create_Group_Component.GroupView.GroupActions.ManageMembers.h3'| translate}}</h3>
 
     <!-- <mat-nav-list *ngIf="clientMembers?.length">
       <div mat-list-item *ngFor="let client of clientMembers index as i">
@@ -52,7 +52,7 @@
         </button>
       </div>
     </mat-nav-list> -->
-    
+
     <div class="fix-table1-client">
       <div fxLayout fxLayoutAlign="start center">
         <mat-form-field fxFlex="40%">
@@ -68,13 +68,13 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="Status">
-          <th mat-header-cell *matHeaderCellDef>Trạng thai</th>
+          <th mat-header-cell *matHeaderCellDef>{{'Group_Component.Create_Group_Component.GroupView.GroupActions.ManageMembers.status'| translate}}</th>
           <td mat-cell *matCellDef="let element">
             <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
           </td>
         </ng-container>
         <ng-container matColumnDef="Action">
-          <th mat-header-cell *matHeaderCellDef> Thao tác</th>
+          <th mat-header-cell *matHeaderCellDef> {{'Group_Component.Create_Group_Component.GroupView.GroupActions.ManageMembers.Action'| translate}}</th>
           <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="primary" (click)="showClientDetail(element)">
               <fa-icon icon="eye"></fa-icon>
