--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,7 +61,7 @@
       <mat-card class="m-b-10" fxFlex="49" fxFlex.lt-md="100" tourAnchor="id6">
         <mat-card-header>
           <mat-card-title class="title">
-            <h3>Tim kiếm thông tin khách hàng:</h3>
+            <h3>{{ "Home_Component.welcome" | translate }}{{'Home_Component.searchCustomer'| translate }}</h3>
           </mat-card-title>
         </mat-card-header>
 
@@ -89,7 +89,7 @@
           <mat-card-header>
             <mat-card-title class="title">
               <!-- {{'Home_Component.Card'| translate}} <strong>{{username}}</strong>! -->
-              Lịch làm việc:
+              {{'Home_Component.timeLine'| translate }}
             </mat-card-title>
           </mat-card-header>
 
