--- a/src/app/home/dashboard/amount-disbursed-pie/amount-disbursed-pie.component.html
+++ b/src/app/home/dashboard/amount-disbursed-pie/amount-disbursed-pie.component.html
@@ -3,10 +3,10 @@
   <mat-card-header class="header">
     <h3 fxFlex="100%">
       <fa-icon icon="money-bill"></fa-icon>
-      &nbsp;&nbsp; Amount Disbursed
+      &nbsp;&nbsp; {{'Home_Component.Dashboard.Disbursed.AmountDisbursed'| translate }}
       <div>
         <mat-form-field id="office" fxFlex="94%">
-          <mat-label>Office</mat-label>
+          <mat-label>{{'Home_Component.Dashboard.Disbursed.office'| translate }}</mat-label>
           <mat-select [formControl]="officeId">
             <mat-option *ngFor="let office of officeData" [value]="office.id">
               {{ office.name }}
@@ -23,8 +23,8 @@
       <canvas id="disbursement-pie" width="800" height="600"></canvas>
     </div>
     <div *ngIf="showFallback" class="fallback" fxLayoutAlign="center center">
-      <p>No Data</p>
-    </div>      
+      <p>{{'Home_Component.Dashboard.Disbursed.NoData'| translate }}</p>
+    </div>
   </mat-card-content>
 
 </mat-card>
