--- a/src/app/home/dashboard/client-trends-bar/client-trends-bar.component.html
+++ b/src/app/home/dashboard/client-trends-bar/client-trends-bar.component.html
@@ -3,10 +3,10 @@
   <mat-card-header class="header">
     <h3 fxFlex="100%">
       <fa-icon icon="chart-line"></fa-icon>
-      &nbsp;&nbsp; Client Trends
+      &nbsp;&nbsp; {{'Home_Component.Dashboard.ClientTrendsBar.ClientTrends'| translate }}
       <div>
         <mat-form-field id="office" fxFlex="94%">
-          <mat-label>Office</mat-label>
+          <mat-label>{{'Home_Component.Dashboard.ClientTrendsBar.officeId'| translate }}</mat-label>
           <mat-select [formControl]="officeId">
             <mat-option *ngFor="let office of officeData" [value]="office.id">
               {{ office.name }}
@@ -23,9 +23,9 @@
       <canvas id="client-trends-bar" width="800" height="465"></canvas>
     </div>
     <mat-button-toggle-group [formControl]="timescale" id='timescale' appearance="legacy">
-      <mat-button-toggle value="Day">Day</mat-button-toggle>
-      <mat-button-toggle value="Week">Week</mat-button-toggle>
-      <mat-button-toggle value="Month">Month</mat-button-toggle>
+      <mat-button-toggle value="Day">{{'Home_Component.Dashboard.ClientTrendsBar.Day'| translate }}</mat-button-toggle>
+      <mat-button-toggle value="Week">{{'Home_Component.Dashboard.ClientTrendsBar.Week'| translate }}</mat-button-toggle>
+      <mat-button-toggle value="Month">{{'Home_Component.Dashboard.ClientTrendsBar.Month'| translate }}</mat-button-toggle>
     </mat-button-toggle-group>
   </mat-card-content>
 
